tests/ui/common/function_unsupported_argument.stderr
error: unsupported hook argument
 --> tests/ui/common/function_unsupported_argument.rs:3:18
  |
3 | #[hook::function(symbol = "puts")]
  |                  ^^^^^^
